--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,7 @@
   </head>
   <body>
     <include src="./public/components/header.html"></include>
+
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
