--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,14 @@
   <body>
     <include src="./public/components/header.html"></include>
 
+    <!--JS-->
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+
     <script type="module" src="./index.js"></script>
   </body>
 </html>
